--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bingo-timestamp",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
   "type": "module",
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Alexis Klisch",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "random-seed": "0.3.0"
   },
